--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "naveen",
-  "license": "ISC", 
+  "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.3"
